--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -12,8 +12,9 @@ body {
 .container_login_cadastro {
     width: 100%; height: 30px; clear: right;
 }
+.subcontainer_login_cadastro{float: right; clear: left;} /* Apenas para inverter a sequencia de declaração dos elementos (navegação com Tab)*/
 .container_login_cadastro button {
-    float: right;
+    float: left;
     margin: 5px 1px;
     border: none;
     color: #428BDD;
@@ -23,7 +24,7 @@ body {
     cursor: pointer;
     text-decoration: underline;
 }
-.container_form_login {float: right;}
+.container_form_login {float: left;}
 .container_form_login input[type=email] {
     width: 125px; margin-right: 6px; padding: 4px;
     border: 1px solid #00CC7A; border-radius: 3px;
