--- a/pages/stylesheets/home.css
+++ b/pages/stylesheets/home.css
@@ -11,7 +11,7 @@ body {
 .coluna_superior {
     position: fixed; /* Para não descer com a barra de rolagem*/
     width: 100%;
-    height: 48px;
+    height: 60px;
     z-index: 1; /* Necessário para que os elementos pertencentes a barra do usuário, mas exibidos fora dela (menu e resultado das buscas) fiquem em primeiro plano */
     background-color: #e5e5e5; /*Cor da barra do usuário*/
 }
@@ -26,11 +26,20 @@ body {
 /* Divisão do layout geral para conter o restante do conteúdo da página*/
 .coluna_central {
     position: relative;
-    top: 48px;/*Desconto para não sobrepor a barra do usuário*/
-    /*margin-left: 0%; /*Layout responsivo: Começa da largura total da tela*/
+    top: 60px;/*Desconto para não sobrepor a barra do usuário*/
     width: 100%;
-    height: 100%;
-    /*float: left;/*Necessário para não sobrepor com a barra do usuário (Não sei explicar, mas sem isso ocorre esse bug de grandes proporções)*/
+    background-color: #ffff80;
+}
+/* Divisão debtro da coluna central para conter a lista de espaços*/
+.coluna_central_c1 {
+    width: 30%;
+    display: inline-block;
+}
+/* Divisão dentro da coluna central para conter um espaço ativo*/
+.coluna_central_c2 {
+    width: 69%;
+    display: inline-block;
+    background-color: #428BDD;
 }
 /**************************************************************************************************/
 /*                                AJUSTES DO LAYOUT RESPONSIVO                                    */
@@ -40,7 +49,12 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-
+    .coluna_central {width: 90%; margin: auto;}
+    .caixa_texto_busca {width: 50%;}
+    /* Altura da barra de busca*/
+    .container_form_busca form {
+        padding-top: 230px;
+    }
 }
 
 @media screen and (min-width: 1140px) {
