--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -47,7 +47,7 @@ body {
 }
 /* Formulário com o input de texto para busca*/
 .container_form_busca {
-    width: 100%; height: 60%;
+    width: 100%; /*height: 60%;*/
 }
 .container_form_busca form {
     padding-top: 40%;
