Implementados todos os métodos e JSs do ciclo criar/entrar/sair de um espaço, com registro de entrada e saída na tabela userspaces e contagem de usuários na spaces. Também foi implementada a listagem de espaços abertos na coluna C1, na home, a esquerda do espaço visualizado.

--- a/pages/stylesheets/userBar.css
+++ b/pages/stylesheets/userBar.css
@@ -97,7 +97,7 @@
     /*margin: auto;*/
     border-bottom: 1px solid #ccc;
 }
-.resultado_busca_item_container:hover{background-color: #eee;}
+.resultado_busca_item_container:hover{background-color: #eee; cursor: pointer;}
 .resultado_busca_item_bloco_esquerdo {
     float: left;
     padding: 4px;
