--- a/pages/stylesheets/home.css
+++ b/pages/stylesheets/home.css
@@ -30,16 +30,43 @@ body {
     width: 100%;
     background-color: #ffff80;
 }
-/* Divisão debtro da coluna central para conter a lista de espaços*/
+/* Divisão dentro da coluna central para conter a lista de espaços*/
 .coluna_central_c1 {
     width: 30%;
-    display: inline-block;
+    /*display: inline-block;*/
+    float: left;
+}
+.c1_lista_espacos {
+    width: 100%;
+    /*margin: auto;*/ /* Para centralizar se o width for menor que 100%*/
+}
+.c1_lista_espaco_container_individual {
+    /*width: 90%;*/
+    padding: 4%;
+    /*height: 40px;*/
+    border-bottom: solid 1px #aaa;
+    border-radius: 4px;
+    background-color: #e9e9e9;
+    display: block;
+    margin-top: 2px;
+    /*font-weight: bold;*/
+    color: #555;
 }
 /* Divisão dentro da coluna central para conter um espaço ativo*/
 .coluna_central_c2 {
+    float: left;
     width: 69%;
-    display: inline-block;
-    background-color: #428BDD;
+    /*display: inline-block;*/
+    /*background-color: #428BDD;*/
+    /*height: 100px;*/
+}
+.c2_msg {
+    /*width: 100%;*/
+    padding: 10px;
+    margin: 2px;
+    border: solid 1px black;
+    border-radius: 4px;
+    /*display: block;*/
 }
 /**************************************************************************************************/
 /*                                AJUSTES DO LAYOUT RESPONSIVO                                    */
