--- a/pages/stylesheets/home.css
+++ b/pages/stylesheets/home.css
@@ -43,14 +43,14 @@ body {
 .c1_lista_espaco_container_individual {
     /*width: 90%;*/
     padding: 4%;
-    /*height: 40px;*/
-    border-bottom: solid 1px #aaa;
     border-radius: 4px;
     background-color: #e9e9e9;
     display: block;
     margin-top: 2px;
-    /*font-weight: bold;*/
-    color: #555;
+    color: #3e4859;
+}
+.c1_lista_espaco_container_individual:hover{
+    background-color: #e2e2e2;
 }
 /* Divisão dentro da coluna central para conter um espaço ativo*/
 .coluna_central_c2 {
