--- a/pages/stylesheets/userBar.css
+++ b/pages/stylesheets/userBar.css
@@ -70,13 +70,20 @@
     width: 100%;
     padding: 12px 10px;
     margin-bottom: 5px;
-    border: 1px solid #bbb;
-    border-radius: 4px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
     font-size: 16px;
 }
 .barra_usuario_busca_container input[type=submit] {
-    padding: 10px;
-    font-size: 15px;
+    padding: 12px 0;
+    width: 42px;
+    border: none;
+    border-radius: 30px;
+    margin-left: 4px;
+    background-color: #ddd;
+}
+.barra_usuario_busca_container input[type=submit]:hover{
+    background-color: #ccc;
 }
 /*Div para exibir os resultados da busca. Tem um JS para ser mostrada e escondida e as dimensões são ajustadas para cada tamanho de tela*/
 .resultado_busca {
