--- a/pages/stylesheets/home.css
+++ b/pages/stylesheets/home.css
@@ -40,18 +40,79 @@ body {
     width: 100%;
     /*margin: auto;*/ /* Para centralizar se o width for menor que 100%*/
 }
+/* tasc tasc... */
+.c1_lista_espacos .cabecalio {
+    margin: 31px 0 0 4px;
+    color: #3e4859;
+    font-size: 13px;
+}
 .c1_lista_espaco_container_individual {
     /*width: 90%;*/
-    padding: 4%;
+    padding: 14px 4px 14px 10px;
     border-radius: 4px;
     background-color: #e9e9e9;
     display: block;
     margin-top: 2px;
     color: #3e4859;
 }
-.c1_lista_espaco_container_individual:hover{
+.c1_lista_espaco_container_individual:hover {
     background-color: #e2e2e2;
 }
+/* NÚMERO DE USUÁRIOS NO ESPAÇO LISTADO*/
+/*.numero_usuarios_espaco_listado {
+    float: right;
+}8/
+/********************************************* NOVO **********************************/ 
+/* NÚMERO DE NOVAS MENSAGENS NO ESPAÇO LISTADO*/
+.numero_msgs_espaco_listado {
+    display: none;
+    float: right;
+    margin: -14px 0 0 8px;
+    /*min-width: 42px;*/
+}
+.numero_msgs_espaco_listado .icone {
+    display: inline-block;
+    background-image: url('backgrounds/message_list.png');
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    background-size: 12px;
+    /*border-radius: 0px;*/
+    margin: 0 2px -2px 0;
+    /*border: 1px solid black;*/
+}
+.numero_msgs_espaco_listado .numero {
+    display: inline-block;
+    /*min-width: 10px;*/
+    font-size: 12px;
+    /*border: 1px solid black;*/
+}
+/* NÚMERO DE NOVOS USUÁRIOS NO ESPAÇO LISTADO*/
+.numero_usuarios_espaco_listado {
+    float: right;
+    margin: -14px 0 0 8px;
+    /*min-width: 42px;*/
+}
+.numero_usuarios_espaco_listado .icone {
+    display: inline-block;
+    background-image: url('backgrounds/user_list.png');
+    background-repeat: no-repeat;
+    width: 11px;
+    height: 11px;
+    background-size: 11px;
+    /*border-radius: 0px;*/
+    margin: 0 2px -1px 0;
+    /*border: 1px solid black;*/
+}
+.numero_usuarios_espaco_listado .numero {
+    display: inline-block;
+    /*min-width: 10px;*/
+    font-size: 12px;
+    /*color: #23c636;*/
+    /*font-weight: bold;*/
+    /*border: 1px solid black;*/
+}
+/********************************************* NOVO **********************************/ 
 /* Divisão dentro da coluna central para conter um espaço ativo*/
 .coluna_central_c2 {
     float: left;
